crates/service/tests/diagnostics/snapshots/features__diagnostics__block_type__in_try_table.snap
---
source: crates/service/tests/diagnostics/block_type.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 21
        },
        "end": {
          "line": 4,
          "character": 22
        }
      },
      "severity": 1,
      "code": "block-type",
      "source": "wat",
      "message": "block type must be function type"
    }
  ]
}
